fixed logo offcentering

--- a/app/memreas/css/register.css
+++ b/app/memreas/css/register.css
@@ -432,9 +432,9 @@ footer {
 }
 
     #slider{
-       left: 5.7em;
+       left: 5.4em;
        z-index: 1;
-       top: 4.4em;
+       top: 4.1em;
        width: 51.9%;
     }
     .rslides{
